<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/ivToolscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/tools_screen_icon"
        android:scaleType="centerCrop"/>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btnShowMyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_show_my_name" />

        <Button
            android:id="@+id/btnShowMyAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_show_my_age" />


        <Button
            android:id="@+id/btnCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txe_calculator" />


        <Button
            android:id="@+id/btnDollarToPkr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex_dollar_to_pkr" />


        <Button
            android:id="@+id/btnPoundToPkr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex_pound_to_pkr" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>