<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PoundToPkrActivity">

    <TextView
        android:id="@+id/tvEnterPound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/txe_enter_pound"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etEnterPound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etEnterPound" />

    <EditText
        android:id="@+id/etEnterPound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvEnterPound"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConvertToPkr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tex_convert_to_pkr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterPound"
        app:layout_constraintVertical_bias="0.176"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/tvPkrIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginStart="136dp"
        android:text="@string/txe_pkr_is"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvertToPkr" />


</androidx.constraintlayout.widget.ConstraintLayout>